tests/neg/i4377.scala
object App {
  type T[A <: ((a : A) => a.type)] = A
  val a: T[_] = ??? // error
}
